Fix vert align of social

--- a/src/Pioneer.Blog/app-client/styles/_footer.scss
+++ b/src/Pioneer.Blog/app-client/styles/_footer.scss
@@ -39,11 +39,6 @@ footer.main {
 
   ul.menu {
     margin: -7px 0 1rem;
-
-
-    li:last-child {
-      margin: 0;
-    }
   }
 
   p.email {
